--- a/templates/home.html
+++ b/templates/home.html
@@ -1,7 +1,7 @@
 {% extends 'layout.html' %}
-{% block title %}todolist webapp{% endblock %}
+{% block title %}Página principal{% endblock %}
 {% block contents %}
-<h1>todolist webapp</h1>
+<h1>Bienvenid@</h1>
 <br>
 <a href="{{ url_for('auth.login') }}">login</a><br>
 <a href="{{ url_for('auth.register') }}">register</a>
