--- a/templates/orders/home.html
+++ b/templates/orders/home.html
@@ -5,23 +5,22 @@
 <br>
 <table>
     <tr>
-        <th>Buyer</th>
         <th>Provider</th>
         <th>description</th>
-        <th>discount</th>
-        <th>tax</th>
+        <th>unitcostpurchase</th>
+        <th>Quantity</th>
+        <th>unitcostsale</th>
         <th>Date</th>
-        <th>totalsale</th>
+
     </tr>
 {% for order in orders %}
     <tr>
-        <td>{{order.buyer}}</td>
         <td>{{order.provider}}r</td>
         <th>{{order.description}}</td>
-        <td>{{order.discount}}</td>
-        <td>{{order.tax}}</td>
+        <td>{{order.unitcostpurchase}}</td>
+        <td>{{order.Quantity}}</td>
+        <td>{{order.unitcostsale}}</td>
         <td>{{order.date}}</td>
-        <td>{{order.totalsale}}</td>
         <td><a href="{{ url_for('orderDetails.create', orderId=order.id) }}">Add order detail</a></td>
         <td><a href="{{ url_for('orderDetails.home', id_order=order.id)  }}">View order detail</a></td>
     </tr>
